--- a/Home.html
+++ b/Home.html
@@ -39,8 +39,11 @@
     <section class="u-align-center u-clearfix u-shading u-uploaded-video u-video u-section-1" id="carousel_5ad0" src="">
       <div class="u-background-video u-expanded" style="filter: brightness(0.5);">
         <div class="embed-responsive">
-          <video class="embed-responsive-item" data-autoplay="1" loop="" muted="1" autoplay="autoplay" playsinline="">
+          <video class="embed-responsive-item" data-autoplay="1" loop="" muted="1" autoplay="autoplay" playsinline="" controls="false">
+            <source src="files/BGvideo.mov" type="video/mov">
             <source src="files/BGvideo.webm" type="video/webm">
+            <source src="files/BGvideo.mp4" type="video/mp4">
+            <source src="files/BGvideo.ogv" type="video/ogg">
             <p>Your browser does not support HTML5 video.</p>
           </video>
         </div>
@@ -400,7 +403,7 @@ staring at the stimuli would produce results, but the 20 second period gave opti
         <h3 class="u-text u-text-default u-text-2"> Results from running an online test when a person picks two commands for the user to look at:</h3>
         <div class="u-expanded-width u-video u-video-contain u-video-1" data-animation-name="customAnimationIn" data-animation-duration="1250" data-animation-out="0">
           <div class="embed-responsive embed-responsive-1">
-            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/t4_veYBPYJc?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
+            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/pjO4MGiFp74?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
           </div>
         </div>
       </div>
@@ -507,16 +510,4 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           <br>raheeqdarweesh@gmail.com<br>dcuscino44@gmail.com&nbsp;
         </p>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/css-templates" target="_blank">
-        <span>CSS Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="https://nicepage.com/website-builder" target="_blank">
-        <span>Website Builder</span>
-      </a>. 
-    </section>
-  
 </body></html>
