--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </head>
 
 <body>
-    <video id="bg-video" autoplay muted loop>
+    <video id="bg-video" autoplay muted loop playsinline>
         <!-- Background Video Tag -->
         <source src="files/BGvideo.mov" type="video/mov">
         <source src="files/BGvideo.webm" type="video/webm">
